--- a/Call_quality_analyzer.ipynb
+++ b/Call_quality_analyzer.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPi5xiUsACYxdTpQ6JkNRTd",
+      "authorship_tag": "ABX9TyMdIRNkB5lNhhZhrKv9eBh/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1012,6 +1012,52 @@
         "    print(\"• Could not save transcript\")\n",
         "\n",
         "print(\"\\nAnalysis complete!\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import json\n",
+        "\n",
+        "nb_file = \"Call_quality_analyzer.ipynb\"\n",
+        "\n",
+        "with open(nb_file, \"r\", encoding=\"utf-8\") as f:\n",
+        "    nb = json.load(f)\n",
+        "\n",
+        "# --- Fix notebook-level metadata ---\n",
+        "if \"widgets\" in nb.get(\"metadata\", {}):\n",
+        "    print(\"🧹 Removing notebook-level widgets metadata\")\n",
+        "    del nb[\"metadata\"][\"widgets\"]\n",
+        "\n",
+        "# --- Fix cell-level metadata ---\n",
+        "for cell in nb.get(\"cells\", []):\n",
+        "    if \"metadata\" in cell and \"widgets\" in cell[\"metadata\"]:\n",
+        "        print(\"🧹 Removing cell-level widgets metadata\")\n",
+        "        del cell[\"metadata\"][\"widgets\"]\n",
+        "\n",
+        "# Save cleaned notebook\n",
+        "with open(nb_file, \"w\", encoding=\"utf-8\") as f:\n",
+        "    json.dump(nb, f, indent=2, ensure_ascii=False)\n",
+        "\n",
+        "print(f\"✅ Fully cleaned {nb_file}\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jhY7jb9Ds33x",
+        "outputId": "ed77f918-59d6-4e30-f6ca-0dc5e1cc6089"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "🧹 Removing notebook-level widgets metadata\n",
+            "✅ Fully cleaned Call_quality_analyzer.ipynb\n"
+          ]
+        }
       ]
     }
   ]
