--- a/Call_quality_analyzer.ipynb
+++ b/Call_quality_analyzer.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMdIRNkB5lNhhZhrKv9eBh/",
+      "authorship_tag": "ABX9TyMF0zVgUGTCli6iQ23g515N",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -489,9 +489,9 @@
         "!curl -L https://github.com/yt-dlp/yt-dlp/releases/latest/download/yt-dlp -o /usr/local/bin/yt-dlp 2>/dev/null\n",
         "!chmod a+rx /usr/local/bin/yt-dlp\n",
         "\n",
-        "# HF token -\n",
+        "# HF token - Replace with your token\n",
         "from huggingface_hub import login\n",
-        "login(\"\")  #read-token\n",
+        "login(\"\")  # your read-token\n",
         "\n",
         "import os, math, re, time, torch, numpy as np, pandas as pd\n",
         "from pydub import AudioSegment\n",
@@ -510,10 +510,10 @@
         "start_time = time.time()\n",
         "\n",
         "# YouTube URL\n",
-        "YOUTUBE_URL = \"https://youtu.be/4ostqJD3Psc?si=R0QZg6YjCPdmcR-2\" #your url\n",
+        "YOUTUBE_URL = \"https://youtu.be/4ostqJD3Psc?si=R0QZg6YjCPdmcR-2\"\n",
         "audio_path = \"/tmp/call.mp3\"\n",
         "\n",
-        "# Download audio only\n",
+        "# Download audio only (not video format 18)\n",
         "print(\"Downloading audio from YouTube...\")\n",
         "if os.path.exists(audio_path):\n",
         "    os.remove(audio_path)\n",
@@ -1012,52 +1012,6 @@
         "    print(\"• Could not save transcript\")\n",
         "\n",
         "print(\"\\nAnalysis complete!\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import json\n",
-        "\n",
-        "nb_file = \"Call_quality_analyzer.ipynb\"\n",
-        "\n",
-        "with open(nb_file, \"r\", encoding=\"utf-8\") as f:\n",
-        "    nb = json.load(f)\n",
-        "\n",
-        "# --- Fix notebook-level metadata ---\n",
-        "if \"widgets\" in nb.get(\"metadata\", {}):\n",
-        "    print(\"🧹 Removing notebook-level widgets metadata\")\n",
-        "    del nb[\"metadata\"][\"widgets\"]\n",
-        "\n",
-        "# --- Fix cell-level metadata ---\n",
-        "for cell in nb.get(\"cells\", []):\n",
-        "    if \"metadata\" in cell and \"widgets\" in cell[\"metadata\"]:\n",
-        "        print(\"🧹 Removing cell-level widgets metadata\")\n",
-        "        del cell[\"metadata\"][\"widgets\"]\n",
-        "\n",
-        "# Save cleaned notebook\n",
-        "with open(nb_file, \"w\", encoding=\"utf-8\") as f:\n",
-        "    json.dump(nb, f, indent=2, ensure_ascii=False)\n",
-        "\n",
-        "print(f\"✅ Fully cleaned {nb_file}\")\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "jhY7jb9Ds33x",
-        "outputId": "ed77f918-59d6-4e30-f6ca-0dc5e1cc6089"
-      },
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "🧹 Removing notebook-level widgets metadata\n",
-            "✅ Fully cleaned Call_quality_analyzer.ipynb\n"
-          ]
-        }
       ]
     }
   ]
