--- a/Call_quality_analyzer.ipynb
+++ b/Call_quality_analyzer.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMF0zVgUGTCli6iQ23g515N",
-      "include_colab_link": true
+      "gpuType": "T4"
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +13,7 @@
     "language_info": {
       "name": "python"
     },
+    "accelerator": "GPU",
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
         "3e5ebb6f666340fa87abd2f859623665": {
@@ -363,16 +363,6 @@
   },
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/purushottamk3112/call_analyzer/blob/main/Call_quality_analyzer.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -489,9 +479,9 @@
         "!curl -L https://github.com/yt-dlp/yt-dlp/releases/latest/download/yt-dlp -o /usr/local/bin/yt-dlp 2>/dev/null\n",
         "!chmod a+rx /usr/local/bin/yt-dlp\n",
         "\n",
-        "# HF token - Replace with your token\n",
+        "# HF token -\n",
         "from huggingface_hub import login\n",
-        "login(\"\")  # your read-token\n",
+        "login(\"\")  #read-token\n",
         "\n",
         "import os, math, re, time, torch, numpy as np, pandas as pd\n",
         "from pydub import AudioSegment\n",
@@ -510,10 +500,10 @@
         "start_time = time.time()\n",
         "\n",
         "# YouTube URL\n",
-        "YOUTUBE_URL = \"https://youtu.be/4ostqJD3Psc?si=R0QZg6YjCPdmcR-2\"\n",
+        "YOUTUBE_URL = \"https://youtu.be/4ostqJD3Psc?si=R0QZg6YjCPdmcR-2\" #your url\n",
         "audio_path = \"/tmp/call.mp3\"\n",
         "\n",
-        "# Download audio only (not video format 18)\n",
+        "# Download audio only\n",
         "print(\"Downloading audio from YouTube...\")\n",
         "if os.path.exists(audio_path):\n",
         "    os.remove(audio_path)\n",
